wk2-gtk does not display anything https://bugs.webkit.org/show_bug.cgi?id=125558

Reviewed by Martin Robinson.

Remove fcntl call to set access mode flags on the duplicated files
descriptor. Those flags are ignored in Linux and make fcntl to
fail in FreeBSD. We should handle the case where the passed
protection is ReadOnly.
Thanks to Raphael Kubo da Costa who proposed the solution.

* Platform/unix/SharedMemoryUnix.cpp:
(WebKit::SharedMemory::createHandle):
(WebKit::accessModeFile): Deleted.

Canonical link: https://commits.webkit.org/149600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167128 268f45cc-cd09-0410-ab3c-d52691b4dbfc